--- a/style_accueil.css
+++ b/style_accueil.css
@@ -21,21 +21,28 @@
 
 /******************** Wraper start****************************** */
 .wraper {
-  display: grid;
- 
- 
+  /* display: flex;
+  flex-direction: column; 
+  justify-content: space-between;
+  */
 
+height: 100vh;
+  
  
+ display: grid;
 
+ align-content: space-between;
+ gap: 20px;
   grid-template-columns: 1fr;
-  grid-auto-rows: minmax(50px, auto);
+  /* grid-template-rows:  150px 1fr  90px ; */
+  /* grid-auto-rows: minmax(50px, auto); */
   grid-template-areas:
   'hd' 
   'mn'
-  'ft';
+  'ft'; 
 }
 
-header {
+ header {
   grid-area: hd;
 }
 main {
@@ -49,9 +56,10 @@ footer {
 
 /******************** Header start****************************** */
 header {
+  
   position: relative;
   /* height: 150px; */
-  height: 12vh;
+  /* height: 12vh; */
 
   background: #feb700;
   display: grid;
@@ -136,56 +144,58 @@ a:hover {
 /******************** Main start****************************** */
 main {
   
+  
   display: grid;
   /* height: 640px; */
-  grid-template-columns: repeat(6, 1fr);
- grid-template-rows: repeat(3, 1fr);
-  grid-template-areas: 
-                'sec1 sec1 sec1 sec1 calen calen'
-                'sec1 sec1 sec1 sec1 evv evv'
-                'sec1 sec1 sec1 sec1 evp evp'
-                ;
-  align-items: center;
+  grid-template-columns: 2fr 1fr;
+  
+ /* grid-template-rows: repeat(1, 1fr); */
+  /* grid-template-areas: 
+                'sec1 sec1 sec1 sec1 sec2 sec2'
+                'sec1 sec1 sec1 sec1 sec2 sec2'
+                'sec1 sec1 sec1 sec1 sec2 sec2'
+                ; */
+  align-items: start;
   justify-items: center;
 
-  box-sizing: border-box;
+  
 }
 
 
 .home_page_section1 {
-  grid-area: sec1;
+  /* grid-area: sec1; */
   display: grid;
-  grid-template-columns: 1.5fr 2.5fr;
-  width: 90%;
+  grid-template-columns: 2fr 2.5fr;
+  /* width: 90%; */
+   height: 100%; 
+   
   background-color: #085d85;
   border: 1px solid #08425d;
   border-radius: 50px;
   align-items: center;
   justify-items: center;
-  box-sizing: border-box;
-  padding: 20px 0;
+  margin-left: 10%;
+
   
 }
 
-/* .home_page_section1::before {
-    content: "";
-    display: block;
-    padding-top: 100%;  
-} */
+
 .photo_home_page {
+  height: 100%;
   display: flex;
-  box-sizing: border-box;
+  
   padding: 20px 0;
   justify-content: center;
   align-items: center;
-  /* padding: 3%; */
+  
  
 }
 
 .photo_home_page> img{
   width: 100%;
   height: 100%;
-  /* margin: 50px; */
+  
+  
 }
 
 
@@ -204,28 +214,43 @@ main {
   align-items: center;
   font-family: Laila;
   font-style: normal;
-  font-size: 24px;
+  /* font-size: 24px; */
+  font-size: 2vw;
   color: #ffffff;
   text-align: center;
-  line-height: 37px;
+  /* line-height: 37px; */
+  line-height: 3.3vw;
   
-  /* margin: 186px 16px 240px 24px; */
+  
 }
 
-/* .home_page_section2 {
-  display: flex;
+.text_home_page > p {
+  margin-top: 8%;
+}
+
+.home_page_section2 {
+  display: grid;
+  /* grid-template-columns:  1fr; */
+  grid-template-rows: 1fr 2fr;
+  width: 100%; 
+   height: 100%;
+  align-items: start;
+  justify-items: center;
+  /* grid-area: sec2; */
+  /* display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-between; */
   
-  width: 30%;
-  max-width: 330px;
+  /* width: 30%; */
+  /* max-width: 330px; */
   
-} */
+}
 
 .calendrie_home_page {
-  grid-area: calen;
   
-  
+  width: 70%;
+  height: 90%;
+  /* width: 90%; */
   
   background-color: #085d85;
   border: #08425d solid 1px;
@@ -235,55 +260,102 @@ main {
   
 }
 
-.calendrie_home_page img {
+.calendrie_home_page a {
+  display: flex;
   width: 100%;
   height: 100%;
+  align-items: center;
 
-  
+  justify-content: center;
 }
 
-/* .home_page_evenement {
-  display: flex;
-  flex-direction: column;
+.calendrie_home_page img {
   width: 90%;
-  height: 60%;
-  
-  text-align: center;
+  height: 80%;
+}
 
-  justify-content: space-between;
-} */
-
-.event_venir {
-  grid-area: evv;
+.home_page_evenement {
   display: flex;
   flex-direction: column;
- 
+  justify-content: space-between;
+  width: 70%;
+  height: 100%;
+
   background: #085d85;
   border: #08425d solid 1px;
   border-radius: 30px;
   text-align: center;
+  text-align: center;
+
+  
+}
+
+.event_venir {
+  
+  display: flex;
+  flex-direction: column;
+  height: 40%;
+  /* background: #085d85;
+  border: #08425d solid 1px;
+  border-radius: 30px; */
+  text-align: center;
 
   justify-content: space-around;
+}
+
+.event_venir> .event_btn {
+  height: 45%;
 }
 
 .event_passe {
-  grid-area: evp;
+  /* grid-area: evp; */
   display: flex;
   flex-direction: column;
-  
-  background: #085d85;
+  height: 60%;
+  /* background: #085d85;
   border: #08425d solid 1px;
-  border-radius: 30px;
+  border-radius: 30px; */
   text-align: center;
 
   justify-content: space-around;
 }
+
+.event_text {
+  font-family: Langar;
+  font-weight: bold;
+  /* font-size: 30px; */
+  font-size: 2.5vw;
+  color: #FFFEFE;
+  text-decoration: none;
+
+}
+
+.event_btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Langar;
+  font-weight:200;
+  /* font-size: 24px; */
+  font-size:  2.2vw;
+  color: #FFFEFE;
+  text-decoration: none;
+  border: 2px solid white;
+  border-radius: 15px;
+  width: 80%;
+  height: 30%;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
+
 
 /******************** Main end****************************** */
 
 /******************** Footer start****************************** */
 
 footer {
+  
   height: 90px;
   background-color: #feb700;
   display: flex;
@@ -367,6 +439,7 @@ footer {
     width: 60%;
   }
 
+
   /************* Footer end**********/
 }
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -447,6 +520,62 @@ footer {
     font-size: 1.2rem;
   }
   /************* Header end**********/
+
+  /************* Main start**********/
+  main {
+    grid-template-columns:  1fr ;
+    grid-template-rows: repeat(2, 1fr); 
+    gap: 20px;
+    align-items: center;
+  }
+  .home_page_section1 {
+    /* grid-column: 1/3; */
+    margin-left: 0;
+    width: 90%;
+  }
+
+  .text_home_page {
+    font-size: 3vw;
+    line-height: 4.5vw;
+  }
+
+  .home_page_section2 {
+    
+    grid-template-rows:  1fr ;
+    grid-template-columns: 1fr ;
+    width: 90%; 
+    align-items: center;
+    
+  }
+
+  .home_page_evenement {
+  
+    flex-direction: row;
+    width: 100%;
+    opacity: 0.1;
+    
+  }
+
+  .event_venir {
+  
+    
+    
+    height: 100%;
+    width: 50%;
+    opacity: 1;
+    text-align: center;
+  
+    justify-content: space-around;
+  }
+
+  .calendrie_home_page{
+    display: none;
+  }
+
+  
+
+
+  /************* Main end**********/
   /************* Footer start**********/
 
   footer {
@@ -487,6 +616,40 @@ footer {
     font-size: 1.3rem;
   }
   /************* Header end**********/
+/************* Main start**********/
+  main {
+    height: 640px;
+    grid-template-columns: 3fr 1fr;
+  }
+
+  .home_page_section1 {
+   
+    margin-left: 5%;
+  }
+
+  .text_home_page {
+    font-size: 2.4vw;
+    line-height: 3.9vw;
+  }
+
+  .calendrie_home_page {
+  
+    width: 80%;
+    height: 80%;
+  }
+
+  .calendrie_home_page img {
+    width: 80%;
+    height: 80%;
+  }
+
+  .home_page_evenement {
+    width: 80%;
+  }
+
+
+  /************* Main end**********/
+  
   /************* Footer start**********/
   footer {
     height: 70px;
