--- a/style_accueil.css
+++ b/style_accueil.css
@@ -23,10 +23,10 @@
 .wraper {
   /* display: flex;
   flex-direction: column; 
-  justify-content: space-between;
-  */
+  justify-content: space-between; */
+ 
 
-height: 100vh;
+ height: 100vh;
   
  
  display: grid;
@@ -36,13 +36,13 @@ height: 100vh;
   grid-template-columns: 1fr;
   /* grid-template-rows:  150px 1fr  90px ; */
   /* grid-auto-rows: minmax(50px, auto); */
-  grid-template-areas:
+  /* grid-template-areas:
   'hd' 
   'mn'
-  'ft'; 
+  'ft';  */
 }
 
- header {
+ /* header {
   grid-area: hd;
 }
 main {
@@ -50,13 +50,13 @@ main {
 }
 footer {
   grid-area: ft;
-}
+} */
 
 /******************** Wraper end****************************** */
 
 /******************** Header start****************************** */
 header {
-  
+  /* padding-bottom:  20px; */
   position: relative;
   /* height: 150px; */
   /* height: 12vh; */
@@ -143,30 +143,39 @@ a:hover {
 
 /******************** Main start****************************** */
 main {
-  
-  
+ 
+
   display: grid;
-  /* height: 640px; */
-  grid-template-columns: 2fr 1fr;
   
- /* grid-template-rows: repeat(1, 1fr); */
-  /* grid-template-areas: 
-                'sec1 sec1 sec1 sec1 sec2 sec2'
-                'sec1 sec1 sec1 sec1 sec2 sec2'
-                'sec1 sec1 sec1 sec1 sec2 sec2'
-                ; */
+  grid-template-columns: 2fr 1fr;
+
   align-items: start;
   justify-items: center;
-
+/* margin-top: 20px;
+margin-bottom: 20px; */
   
 }
 
+.home_page_even_phone, 
+.home_page_anonce_phone {
+  display: none;
+}
+
+.home_page_even_phone {
+  height: 100%;
+  display: none;
+  /* display: flex; */
+  flex-direction: row;
+  width: 90%;
+  justify-content: space-between;
+  
+}
 
 .home_page_section1 {
-  /* grid-area: sec1; */
+  
   display: grid;
   grid-template-columns: 2fr 2.5fr;
-  /* width: 90%; */
+  
    height: 100%; 
    
   background-color: #085d85;
@@ -199,12 +208,6 @@ main {
 }
 
 
-/* .photo_home_page > img {
-    /* position: absolute;
-    top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0; */
 
 .text_home_page {
   width: 90%;
@@ -278,6 +281,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  
   width: 70%;
   height: 100%;
 
@@ -285,10 +289,12 @@ main {
   border: #08425d solid 1px;
   border-radius: 30px;
   text-align: center;
-  text-align: center;
+  
 
   
 }
+
+
 
 .event_venir {
   
@@ -299,7 +305,7 @@ main {
   border: #08425d solid 1px;
   border-radius: 30px; */
   text-align: center;
-
+  align-items: center;
   justify-content: space-around;
 }
 
@@ -316,11 +322,12 @@ main {
   border: #08425d solid 1px;
   border-radius: 30px; */
   text-align: center;
-
+  align-items: center;
   justify-content: space-around;
 }
 
 .event_text {
+  width: 90%;
   font-family: Langar;
   font-weight: bold;
   /* font-size: 30px; */
@@ -362,6 +369,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* padding: 10px; */
 }
 
 .icons_footer {
@@ -426,6 +434,132 @@ footer {
     font-size: 1rem;
   }
   /************* Header end**********/
+
+    /************* Main start**********/
+    html{
+      background-image: url(imgs/photo_home_page.png);
+    }
+  
+    main {
+      grid-template-columns:  1fr;
+      grid-template-rows:  2fr 3fr 1fr;
+      gap: 20px;
+      
+    }
+    .home_page_section1 {
+      display: flex;
+      justify-content: center;
+     
+      height: 100%; 
+      width: 90%;
+      background-color: rgba(255, 240, 189, 0.6);
+      border-radius: 20px;
+      margin-left: 0;
+      
+    }
+  
+    .text_home_page {
+      width: 95%;
+      align-items: space-around;
+        /* font-size: 24px; */
+      
+      font-size:calc(14px + 1vw);
+      color: #000000;
+      text-align: center;
+      /* line-height: 37px; */
+      line-height: calc(21px + 1.5vw);
+    }
+  
+    .text_home_page > p {
+      margin: 10px 0;
+    }
+  
+    .home_page_anonce_phone {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 90%;
+      height: 100%;
+      background: rgba(68, 124, 151, 0.74);
+      border-radius: 20px;
+      border: solid 1px #08425D;
+      box-shadow: 1.75px 1.75px 1.4px #1C2120 ;
+      padding: 5px;
+      
+    }
+  
+    .photo_anonce {
+      width: 90%;
+    }
+    .photo_anonce >img {
+      width: 100%;
+      height: 100%;
+    }
+  
+    .home_page_section2, .photo_home_page  {
+      display: none;
+    }
+  
+    .text_anonce {
+      width: 90%;
+      font-family: Laila;
+      font-style: normal;
+      font-weight: 400;
+      color: #ffffff;
+      text-align: center;
+    }
+  
+    .text_anonce >h3 {
+      font-size:calc(20px + 1vw) ;
+      font-family: Langar;
+      padding: 5px;
+    }
+  
+    
+    .text_anonce >p,h4 {
+      font-size:calc(14px + 1vw);
+      line-height:calc(21px + 1.5vw);
+      
+    }
+  
+    .home_page_even_phone {
+     display: flex;
+    }
+  
+    .event_venir {
+      height: 100%;
+      width: 47%;
+       background: rgba(68, 124, 151, 0.74);
+    border: #08425d solid 1px;
+    border-radius: 20px; 
+    }
+  
+    .event_passe {
+      height: 100%;
+      width: 47%;
+      background: rgba(68, 124, 151, 0.74);
+      border: #08425d solid 1px;
+      border-radius: 20px; 
+     
+    }
+  
+    .event_text {
+      
+      font-size:calc(12px + 1vw);
+    }
+  
+    .event_btn{
+      font-size:calc(12px + 1vw);
+      width: 70%;
+      height: 45%;
+      border-radius: 10px;
+     
+    }
+  
+  
+  
+    /************* Main end**********/
   /************* Footer start**********/
   footer {
     height: 50px;
@@ -475,6 +609,134 @@ footer {
     font-size: 1rem;
   }
   /************* Header end**********/
+
+  /************* Main start**********/
+  html{
+    background-image: url(imgs/photo_home_page.png);
+  }
+
+  main {
+    grid-template-columns:  1fr;
+    grid-template-rows:  2fr 3fr 1fr;
+    gap: 20px;
+    
+  }
+  .home_page_section1 {
+    display: flex;
+    justify-content: center;
+   
+    height: 100%; 
+    width: 90%;
+    background-color: rgba(255, 240, 189, 0.6);
+    border-radius: 20px;
+    margin-left: 0;
+    
+  }
+
+  .text_home_page {
+    width: 95%;
+    align-items: space-around;
+      /* font-size: 24px; */
+    
+    font-size:calc(14px + 1vw);
+    color: #000000;
+    text-align: center;
+    /* line-height: 37px; */
+    line-height: calc(21px + 1.5vw);
+  }
+
+  .text_home_page > p {
+    margin: 10px 0;
+  }
+
+  .home_page_anonce_phone {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 90%;
+    height: 100%;
+    background: rgba(68, 124, 151, 0.74);
+    border-radius: 20px;
+    border: solid 1px #08425D;
+    box-shadow: 1.75px 1.75px 1.4px #1C2120 ;
+    padding: 5px;
+    
+  }
+
+  .photo_anonce {
+    width: 90%;
+  }
+  .photo_anonce >img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .home_page_section2, .photo_home_page  {
+    display: none;
+  }
+
+  .text_anonce {
+    width: 90%;
+    font-family: Laila;
+    font-style: normal;
+    font-weight: 400;
+    color: #ffffff;
+    text-align: center;
+  }
+
+  .text_anonce >h3 {
+    font-size:calc(20px + 1vw) ;
+    font-family: Langar;
+    padding: 5px;
+  }
+
+  
+  .text_anonce >p,h4 {
+    font-size:calc(14px + 1vw);
+    line-height:calc(21px + 1.5vw);
+    
+  }
+
+  .home_page_even_phone {
+   display: flex;
+  }
+
+  .event_venir {
+    height: 100%;
+    width: 47%;
+     background: rgba(68, 124, 151, 0.74);
+  border: #08425d solid 1px;
+  border-radius: 20px; 
+  }
+
+  .event_passe {
+    height: 100%;
+    width: 47%;
+    background: rgba(68, 124, 151, 0.74);
+    border: #08425d solid 1px;
+    border-radius: 20px; 
+   
+  }
+
+  .event_text {
+    
+    font-size:calc(12px + 1vw);
+  }
+
+  .event_btn{
+    font-size:calc(12px + 1vw);
+    width: 70%;
+    height: 45%;
+    border-radius: 10px;
+   
+  }
+
+
+
+  /************* Main end**********/
+
+
   /************* Footer start**********/
   footer {
     height: 50px;
@@ -524,7 +786,7 @@ footer {
   /************* Main start**********/
   main {
     grid-template-columns:  1fr ;
-    grid-template-rows: repeat(2, 1fr); 
+    grid-template-rows:  3fr 1fr; 
     gap: 20px;
     align-items: center;
   }
@@ -540,38 +802,46 @@ footer {
   }
 
   .home_page_section2 {
-    
-    grid-template-rows:  1fr ;
-    grid-template-columns: 1fr ;
-    width: 90%; 
-    align-items: center;
-    
+    display: none;
   }
 
-  .home_page_evenement {
-  
+  .home_page_even_phone {
+    height: 100%;
+    display: flex;
     flex-direction: row;
-    width: 100%;
-    opacity: 0.1;
+    width: 90%;
+    justify-content: space-between;
     
   }
 
   .event_venir {
-  
-    
-    
     height: 100%;
-    width: 50%;
-    opacity: 1;
-    text-align: center;
+    width: 45%;
+     background: #085d85;
+  border: #08425d solid 1px;
+  border-radius: 30px; 
+  }
+
+  .event_passe {
+    height: 100%;
+    width: 45%;
+     background: #085d85;
+    border: #08425d solid 1px;
+    border-radius: 30px; 
+   
+  }
+ 
+  .event_text {
+    font-size: 3vw;
+  }
+
+  .event_btn{
+    font-size: 3vw;
+    width: 80%;
+    height: 45%;
+   
+  }
   
-    justify-content: space-around;
-  }
-
-  .calendrie_home_page{
-    display: none;
-  }
-
   
 
 
