first update style_origin.css

--- a/style_origin.css
+++ b/style_origin.css
@@ -94,8 +94,9 @@
   /******************** Header start****************************** */
   header {
     position: relative;
-    /* height: 150px; */
-    height: 12vh;
+     height: 150px;
+     flex-shrink: 0;
+     margin-bottom: 20px
   
     background: #feb700;
     display: grid;
@@ -128,7 +129,7 @@
     /* font-size: 36px; */
     font-size: 3rem;
     color: #08425d;
-    /* min-width: max-content; */
+    
   }
   
   .nav_main {
@@ -145,10 +146,6 @@
     grid-area: navm;
   }
   
-  .btn_nav {
-    /* display: flex;
-      flex-direction: column; */
-  }
   
   .btn_nav > a:before {
     content: "";
@@ -161,8 +158,6 @@
   }
   
   .btn_nav > a {
-    /* margin: 0 auto; */
-  
     text-decoration: none;
     font-family: Langar;
     font-style: normal;
@@ -188,6 +183,8 @@
   /******************** Footer start****************************** */
   
   footer {
+    flex-shrink: 0;
+    margin-top: 20px;
     height: 90px;
     background-color: #feb700;
     display: flex;
@@ -237,9 +234,6 @@
       height: 55px;
     }
   
-    /* .title{
-      font-size: 1.5rem;
-    } */
     .nav_main,
     .title {
       display: none;
@@ -426,9 +420,7 @@
   }
   @media screen and (min-width: 1280px) {
     /************* Header start**********/
-    header {
-      height: 150px;
-    }
+  
     /************* Header end**********/
   
     /************* Footer start**********/
