--- a/style_origin.css
+++ b/style_origin.css
@@ -96,7 +96,7 @@
     position: relative;
      height: 150px;
      flex-shrink: 0;
-     margin-bottom: 20px
+     margin-bottom: 20px;
   
     background: #feb700;
     display: grid;
