--- a/style_accueil.css
+++ b/style_accueil.css
@@ -1,6 +1,15 @@
 
 
-/******************** Main start****************************** */
+  /******************** Wraper start****************************** */
+  .wraper {
+    display: flex;
+    flex-direction: column;
+    height:100vh;
+    justify-content: space-between;
+  }
+
+  /******************** Wraper end****************************** */
+  /******************** Main start****************************** */
 main {
  
  display: grid;
