--- a/style_origin.css
+++ b/style_origin.css
@@ -4,8 +4,64 @@
     border: 0;
     box-sizing: border-box;
   }
-  /******************** Backgraund start****************************** */
-  
+
+      /****************** Insertion des polices Langar et Laila Regular *********************/
+  @font-face {
+    font-family: 'Langar-Regular';
+    src: url('fonts/Langar-Regular.eot');
+    src:  local('Langar-Regular'), local('Langar-Regular'),
+        url('fonts/Langar-Regular.eot?#iefix') format('embedded-opentype'),
+        url('fonts/Langar-Regular.woff2') format('woff2'),
+        url('fonts/Langar-Regular.woff') format('woff'),
+        url('fonts/Langar-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Laila-Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Laila-Regular'), url('fonts/Laila-Regular.woff') format('woff')
+    url('fonts/Laila-Regular.ttf') format('truetype');
+    }
+    
+
+    @font-face {
+    font-family: 'Laila-Light';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Laila-Light'), url('fonts/Laila-Light.woff') format('woff')
+    url('fonts/Laila-Light.ttf') format('truetype');
+    }
+    
+
+    @font-face {
+    font-family: 'Laila-Medium';
+    font-style: normal;
+    font-weight: normal;
+    src: local('fonts/Laila-Medium'), url('fonts/Laila-Medium.woff') format('woff')
+    url('fonts/Laila-Regular.ttf') format('truetype');
+    }
+    
+
+    @font-face {
+    font-family: 'Laila-SemiBold';
+    font-style: normal;
+    font-weight: normal;
+    src: local('fonts/Laila-SemiBold'), url('fonts/Laila-SemiBold.woff') format('woff');
+    }
+    
+
+    @font-face {
+    font-family: 'Laila-Bold';
+    font-style: normal;
+    font-weight: normal;
+    src: local('fonts/Laila-Bold'), url('fonts/Laila-Bold.woff') format('woff');
+    }
+
+      /************************* Background start************************************ */
+
    html{
     background-image: url(imgs/fond_couture.png);
     background-repeat: no-repeat;
@@ -16,81 +72,14 @@
     -o-background-size: cover;
     background-size: cover;
 
-    /* Insertion des polices Langar et Laila Regular */
-    
-    @font-face {
-        font-family: 'Langar';
-        src: url('Langar-Regular.eot');
-        src: local('Langar Regular'), local('Langar-Regular'),
-            url('Langar-Regular.eot?#iefix') format('embedded-opentype'),
-            url('Langar-Regular.woff2') format('woff2'),
-            url('Langar-Regular.woff') format('woff'),
-            url('Langar-Regular.ttf') format('truetype');
-        font-weight: normal;
-        font-style: normal;
-        font-display: swap;
-    }
-    @font-face {
-        font-family: 'Laila Regular';
-        font-style: normal;
-        font-weight: normal;
-        src: local('Laila Regular'), url('Laila-Regular.woff') format('woff')
-        url('Laila Regular.ttf') format('truetype');
-        }
-        
-    
-        @font-face {
-        font-family: 'Laila Light';
-        font-style: normal;
-        font-weight: normal;
-        src: local('Laila Light'), url('Laila-Light.woff') format('woff')
-        url('Laila Light.ttf') format('truetype');
-        }
-        
-    
-        @font-face {
-        font-family: 'Laila Medium';
-        font-style: normal;
-        font-weight: normal;
-        src: local('Laila Medium'), url('Laila-Medium.woff') format('woff')
-        url('Laila Regular.ttf') format('truetype');
-        }
-        
-    
-        @font-face {
-        font-family: 'Laila SemiBold';
-        font-style: normal;
-        font-weight: normal;
-        src: local('Laila SemiBold'), url('Laila-SemiBold.woff') format('woff');
-        }
-        
-    
-        @font-face {
-        font-family: 'Laila Bold';
-        font-style: normal;
-        font-weight: normal;
-        src: local('Laila Bold'), url('Laila-Bold.woff') format('woff');
-        }
 
-        /* essai pour import de google fonts police Nunito Sans */
-
-        @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
-
-        
+    
+      
   }
   
-  /******************** Backgraund end****************************** */
+  /******************** Background end****************************** */
   
-  /******************** Wraper start****************************** */
-  .wraper {
-    display: flex;
-    flex-direction: column;
-    height:100vh;
-    justify-content: space-between;
-  }
 
-  /******************** Wraper end****************************** */
-  
   /******************** Header start****************************** */
   header {
     /* position: relative; */
@@ -124,8 +113,7 @@
   
   .title {
     grid-area: title;
-    font-family: Langar;
-    font-style: Regular;
+    font-family: 'Langar-Regular';
     /* font-size: 36px; */
     font-size: 3rem;
     color: #08425d;
@@ -164,7 +152,7 @@
   
   .dropdown-content > a{
     text-decoration: none;
-    font-family: Langar;
+    font-family: 'Langar-Regular';
     font-style: normal;
     padding: 10px 10px;
     /* font-size: 20px; */
@@ -199,7 +187,7 @@
   
   .btn_nav > a  {
     text-decoration: none;
-    font-family: Langar;
+    font-family: 'Langar-Regular';
     font-style: normal;
     /* font-size: 20px; */
     font-size: 1.5rem;
@@ -257,7 +245,7 @@
     align-items: center;
     width: 30%;
     height: 40%;
-    font-family: Langar;
+    font-family: 'Langar-Regular';
     font-size: 1rem;
   }
   /******************** Footer end****************************** */
