--- a/evenements.css
+++ b/evenements.css
@@ -1,7 +1,13 @@
-body{
-   height: 300vh;
-}
 
+.wraper {
+
+    height:200vh;
+  }
+  .footer{
+    position: relative;
+    bottom: 0px;
+  }
+/* *********************************bandeau titre************************************ */
 .title_evt{
     font-family: 'Langar-Regular';
     font-weight: 400;
@@ -11,14 +17,68 @@ body{
     border-radius: 10px;
     text-align: center;
     padding: 10px;
-    box-shadow: 3px 3px 3px #08425D;
+    box-shadow: 3px 3px 2px #08425D;
     margin: 0px 12.5% 0px 12.5%;
 
 }
+/******************************* position du bandeau titre du haut *********************/
 .top{
     position: relative;
-    top: 20px;
+    top: 0px;
 }
+
 p{
-    font-family: 'Laila-Regular';
+    font-family: 'Laila-Regular',Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    margin: 0 60px;
+}
+/* ********************************modèle de carte************************************* */
+.card{
+    background-color: #085D85;
+    color: #FFF0BD;
+    text-align: center;
+    margin: 40px 12.5% 40px 12.5%;
+    border-radius: 10px;
+    padding: 10px;
+    line-height: 2em;
+    box-shadow: 3px 3px 2px #08425D;
+}
+.title_card{
+    font-family: 'Langar-Regular';
+    font-weight: 400;  
+}
+h5{
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.bandeau_card{
+    width: 90%;
+    height: 8vh;
+    border-radius: 10px;
+}
+button{
+    margin: 40px 60px 20px 60px;
+    padding: 5px 10px;
+    width: 25%;
+    border-radius: 10px;
+    background-color: #FFF0BD;
+    font-size: 13px;
+    box-shadow: 3px 3px 2px #08425D;
+    font-family: 'Langar-Regular';
+    color: #085D85;
+}
+.images{
+    display: flex;
+    flex-direction: row ;
+    justify-content: space-around;
+
+}
+.illustr{
+    max-width: 30%;
+    border-radius: 10px;
+}
+.rond{
+    border-radius: 50%;
+    width: 15%;
+    align-self: center;
 }
