--- a/evenements.css
+++ b/evenements.css
@@ -1,8 +1,13 @@
 
-.wraper {
-
+  /******************** Wraper start****************************** */
+  .wraper {
+    display: flex;
+    flex-direction: column;
     height:100vh;
+    justify-content: space-between;
   }
+
+  /******************** Wraper end****************************** */
   .footer{
     position: relative;
     bottom: 0px;
@@ -28,7 +33,7 @@
 }
 
 p{
-    font-family: 'Laila-Regular',Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     margin: 0 60px;
 }
