--- a/style_equipe.css
+++ b/style_equipe.css
@@ -1,8 +1,8 @@
-:root {
+/* :root {
     --main_color_blue: #085D85;
     --font_family_main: Laila; 
     --font_family_seconder: Langar; 
-}
+} */
 
 main {
    
