--- a/style_contact.css
+++ b/style_contact.css
@@ -1,8 +1,10 @@
-:root {
-    --main_color_blue: #085D85;
-    /* --font_family_main: Laila; 
-    --font_family_seconder: Langar;  */
-}
+
+    /* :root {
+        --main_color_blue: #085D85;
+        --main_color_yelow:#feb700;
+        --font_family_main: Langar; 
+        --font_family_seconder: Langar; 
+    } */
 
 .main_contact {
     display: flex;
@@ -22,7 +24,7 @@
 .main_contact h2 {
     font-size: calc(15px + 1vw);
     font-weight: 400;
-    font-family: Langar;
+    font-family: var(--font_family_main);
     text-align: center;
 }
 
@@ -30,7 +32,7 @@
     font-size: calc(8px + 1vw);
     line-height: calc(12px + 1.5vw);
     font-weight: 100;
-    font-family: Langar;
+    font-family: var(--font_family_main);
     text-align: center;
 }
 
@@ -65,6 +67,7 @@
     background:rgba(220, 176, 63, 0.95) ;
     color: #000000;
     padding: 5px 10px;
+    font-family: var(--font_family_main);
     font-size: calc(10px + 1vw);
     text-align: center;
     margin: 10px auto;
