corrige accents et ajouts variables secondaires darkblue et lightyelow

--- a/evenements.css
+++ b/evenements.css
@@ -16,13 +16,13 @@
 .title_evt{
     font-family: 'Langar-Regular';
     font-weight: 400;
-    color: #FFF0BD;
-    background-color: #085D85;
+    color: var(--main_color_yelow);
+    background-color:var(--main_color_blue);
     width: 75%;
     border-radius: 10px;
     text-align: center;
     padding: 10px;
-    box-shadow: 3px 3px 2px #08425D;
+    box-shadow: 3px 3px 2px var(--second_color_darkblue);
     margin: 0px 12.5% 0px 12.5%;
 
 }
@@ -71,14 +71,14 @@ p{
 }
 /* ********************************MODELE DE CARTE**************************************/
 .card{
-    background-color: #085D85;
-    color: #FFF0BD;
+    background-color:var(--main_color_blue);
+    color:var(--second_color_lightyelow);
     text-align: center;
     margin: 40px 12.5% 40px 12.5%;
     border-radius: 10px;
     padding: 10px;
     line-height: 2em;
-    box-shadow: 3px 3px 2px #08425D;
+    box-shadow: 3px 3px 2px var(--second_color_darkblue);
 }
 .title_card{
     font-family: 'Langar-Regular';
@@ -95,11 +95,11 @@ button{
     padding: 5px 10px;
     width: 25%;
     border-radius: 10px;
-    background-color: #FFF0BD;
+    background-color:var(--second_color_lightyelow);
     font-size: 13px;
-    box-shadow: 3px 3px 2px #08425D;
+    box-shadow: 3px 3px 2px var(--second_color_darkblue);
     font-family: 'Langar-Regular';
-    color: #085D85;
+    color: var(--main_color_blue);
 }
 .images{
     display: flex;
