--- a/realisations.css
+++ b/realisations.css
@@ -20,32 +20,32 @@ a{
 .button_secondaire{
     text-align: center;
     list-style-type: none;
-    background-color:#085D85;
+    background-color:var(--main_color_blue);
     border-radius: 10px;
     padding: 8px 20px;
     font-size: calc(10px + 1vw);
 }
 
 .button_secondaire:visited{
-    background-color: #feb700;
+    background-color:var(--main_color_yelow);
 }
 .button_secondaire:hover{
-    background-color: #feb700;
+    background-color:var(--main_color_yelow);
     color:black;
     transition: all 0.25s ease-in-out;
 }
 .button_secondaire:active{
-    background-color: #feb700;
-    color:white;
+    background-color:var(--main_color_yelow);
+    color:var(--second_color_lightyelow);
 }
 .active{
-    background-color: #feb700;
+    background-color:var(--main_color_yelow);
     color:black;
 }
 /* *****************************************CARTE LAPIN**************************** */
 h2{
     font-family: 'Langar-Regular';
-    color: #FFF0BD;
+    color:var(--second_color_lightyelow);
     justify-content: center;
 }
 .card_lapin{
@@ -54,7 +54,7 @@ h2{
     text-align: center;
 }
 .fond_bleu{
-    background-color:#085D85;
+    background-color:var(--main_color_blue);
     width: 90%;
     border-radius: 20px;
 }
