--- a/style_equipe.css
+++ b/style_equipe.css
@@ -1,9 +1,11 @@
 /* :root {
     --main_color_blue: #085D85;
-    --font_family_main: Laila; 
+    --second_color_darkblue: #08425d;
+    --main_color_yelow:#feb700;
+    --second_color_lightyelow: #fff0bd;
+    --font_family_main: Langar; 
     --font_family_seconder: Langar; 
 } */
-
 main {
    
     display: flex;
@@ -20,7 +22,7 @@ main {
     width: 85%;
     /* background: var(--main_color_blue); */
     font-family: var(--font_family_main);
-    color: #FFFDFD;
+    color: var(--second_color_lightyelow);
     /* border-radius: 20px; */
     margin-bottom: 20px;
     /* padding:5%; */
@@ -67,7 +69,7 @@ main {
     background: var(--main_color_blue);
     font-family: var(--font_family_seconder);
     font-size: calc(14px + 1vw);
-    color: #FFFDFD;
+    color:var(--second_color_lightyelow);
     border-radius: 20px;
     margin-bottom: 20px;
     padding:1%;
@@ -85,7 +87,7 @@ main {
     justify-content: space-between;
     width: 85%;
     font-family: var(--font_family_main);
-    color: #FFFDFD;
+    color:var(--second_color_lightyelow);
    /* margin-bottom: 20px; */
 }
 
@@ -98,7 +100,7 @@ main {
     width: 45%;
     background: var(--main_color_blue);
     text-align: center;
-    color: #FFFDFD;
+    color:var(--second_color_lightyelow);
     border-radius: 20px;
    
     padding:2%;
