modifier les fichiers style et html 20:12 10.11.2022

--- a/style_accueil.css
+++ b/style_accueil.css
@@ -57,7 +57,7 @@ align-items: start;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: Laila;
+  font-family: var( --font_family_seconder);
   font-style: normal;
   /* font-size: 24px; */
   font-size: 2vw;
