--- a/style_contact.css
+++ b/style_contact.css
@@ -1,11 +1,11 @@
-:root {
+/* :root {
     --main_color_blue: #085D85;
     --second_color_darkblue: #08425d;
     --main_color_yelow:#feb700;
     --second_color_lightyelow: #fff0bd;
     --font_family_main: Langar; 
     --font_family_seconder: Langar; 
-}
+} */
 .main_contact {
     display: flex;
     justify-content: space-between;
@@ -26,14 +26,19 @@
     font-weight: 400;
     font-family: var(--font_family_main);
     text-align: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .main_contact p {
     font-size: calc(8px + 1vw);
     line-height: calc(12px + 1.5vw);
     font-weight: 100;
-    font-family: var(--font_family_main);
+    font-style: normal;
+    font-family: var(--font_family_seconder);
+    /* font-family: Arial, Helvetica, sans-serif; */
     text-align: center;
+    margin-bottom: 5px;
 }
 
 .section1_contact {
