--- a/realisations.css
+++ b/realisations.css
@@ -1,87 +1,194 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-main{
+
+main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center ;
+    align-items: center;
+    font-family: var(--font_family_main);
+    position: relative;
 }
-.nav_secondaire{
+
+.nav_secondaire {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: row;
-    /* align-items: center; */
-    /* justify-content: space-around; */
-    margin: 15%;
-  
-}
-a{
-    text-decoration: none;
-    color:black;
+    align-items: center;
+    justify-content: space-around;
+    margin: 5% 15%;
+    gap: 5em;
+
 }
 
-.button_secondaire{
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.button_secondaire {
     text-align: center;
     list-style-type: none;
-    background-color:var(--main_color_blue);
+    background-color: var(--main_color_blue);
     border-radius: 10px;
     padding: 8px 20px;
     font-size: calc(10px + 1vw);
 }
 
-.button_secondaire:visited{
-    background-color:var(--main_color_yelow);
+.button_secondaire:visited {
+    background-color: var(--main_color_yelow);
 }
-.button_secondaire:hover{
-    background-color:var(--main_color_yelow);
-    color:black;
+
+.button_secondaire:hover {
+    background-color: var(--main_color_yelow);
+    color: black;
     transition: all 0.25s ease-in-out;
 }
-.button_secondaire:active{
-    background-color:var(--main_color_yelow);
-    color:var(--second_color_lightyelow);
+
+.button_secondaire:active {
+    background-color: var(--main_color_yelow);
+    color: var(--second_color_lightyelow);
 }
-.active{
-    background-color:var(--main_color_yelow);
-    color:black;
+
+.active {
+    background-color: var(--main_color_yelow);
+    color: black;
 }
-/* *****************************************CARTE LAPIN**************************** */
-h2{
-    font-family: var(--font_family_main);
-    color:var(--second_color_lightyelow);
-    justify-content: center;
+
+/* *****************************************CARTES**************************** */
+input{
+    display: none;
 }
-.card_lapin{
+.btn_nav2 {
+    position: absolute;
+    top:0;
+    left:0;
+    font-size: 2rem;
+    cursor: pointer;
+    padding: 10px;
+    background-color: aquamarine;
+    margin-right: 10%;
+}
+.tricot, .couture, .crochet{
+    display: none;
+}
+#menu_toutes:checked ~ .couture, #menu_toutes:checked ~ .tricot, #menu_toutes:checked ~ .crochet {
     display: flex;
+
+}
+
+ input:checked  + .btn_nav{
+    background-color: yellow;
+} 
+
+#menu_couture:checked ~ .couture{
+    display: flex;
+}
+
+
+#menu_crochet:checked ~ .crochet{
+    display: flex;
+}
+
+#menu_tricot:checked ~ .tricot{
+    display: flex;
+}
+
+.card {
+    /* display: flex; */
     flex-direction: column;
     text-align: center;
     margin-bottom: 5em;
 }
-.fond_bleu{
-    background-color:var(--main_color_blue);
+
+.fond_bleu {
+    background-color: var(--main_color_blue);
     width: 90%;
     border-radius: 20px;
 }
-.fond_img{
-    max-width: 85%;
+
+h2 {
+    font-family: var(--font_family_main);
+    color: var(--second_color_lightyelow);
+    text-align: center;
 }
-.container{
+
+.container {
     position: relative;
     display: block;
+    width: 100%;
 }
 
-.description{
-    /* margin: 30px; */
+.fond_img {
+    /* display: block; */
+    width: 85%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+
+
+.description {
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    width: 40%;
+    width: 50%;
     border: 2px var(--second_color_lightyelow) solid;
     border-radius: 20px;
-    background-color:rgba(255, 240, 189, 0.6);
-    position:absolute;
-    left: 100px;
+    background-color: rgba(255, 240, 189, 0.85);
+    position: absolute;
+    top: 20px;
+    right: 100px;
+    padding-top: 3.5%;
+    padding-bottom: 3.5%;
+}
 
-    max-width: 30%;
+.card_footer {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.tag_1, .tag_2 {
+    background-color: var(--second_color_lightyelow);
+    color: var(--main_color_blue);
+    font-family: var(--font_family_main);
+    font-weight: 400;
+    padding: 5px;
+    margin: 20px;
+    border-radius: 10px;
+    width: 80px;
+}
+
+.fb {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--second_color_lightyelow);
+    color: var(--main_color_blue);
+    font-family: var(--font_family_main);
+    font-weight: 400;
+    padding: 5px;
+    margin: 20px;
+    border-radius: 10px;
+    width: 150px;
+}
+
+.dislikes {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+/************************************************ MEDIA QUERIES*************************************************** */
+
+@media screen and (max-width:760px) {
+    .container{
+        display:flex;
+    }
+    /* .fond_img{
+        width: 50%;
+    } */
+    
 }
